# langchain-surrealdb

./: .gitignore  CHANGELOG.md  Justfile  Makefile
docs/: vectorstores.ipynb
examples/basic/: Justfile  README.md  graph.py  main.py  pyproject.toml
examples/graph/: Justfile  README.md  pyproject.toml
examples/graph/src/example_graph/: definitions.py  ingest.py  main.py  utils.py
examples/graphrag-travel-group-chat/: pyproject.toml
examples/graphrag-travel-group-chat/src/graphrag_travel_group_chat/: chat.py  db.py  ingest.py  llm.py  retrieve.py
scripts/: check_imports.py  lint_imports.sh
src/langchain_surrealdb/: vectorstores.py
src/langchain_surrealdb/experimental/: surrealdb_graph.py
tests/integration_tests/: test_vectorstores.py
