[project]
name = "basic"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Schaer",email = "martin.schaer@surrealdb.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain-core",
    "langchain-ollama",
    "langchain-surrealdb",
]

[tool.uv.sources]
langchain-surrealdb = { workspace = true }

[tool.ruff.lint]
ignore = ["T201"]
