[project]
name = "graphrag-travel-group-chat"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "langchain-core",
    "langchain-community",
    "langchain-ollama",
    "langchain-surrealdb",
    "nanoid~=2.0.0",
]

[project.scripts]
cli = "graphrag_travel_group_chat.main:cli"

[build-system]
requires = ["uv_build~=0.9.15"]
build-backend = "uv_build"

[tool.uv.sources]
langchain-surrealdb = { workspace = true }
langchain-community = { git = "https://github.com/langchain-ai/langchain-community.git", subdirectory = "libs/community" }
